tests/semantic/rule_arity/rule_arity.dl
.type N

.decl A (x:N, y:N, z:N)
.decl B (x:N)
.decl C (x:N)
.decl D (x:N)

A (x, y, z) :- B(x), C(y), D(z), B(x,y).

